fix: margin-bottom as 0 to avoid weird spacing when a paragraph node follows a list node

--- a/packages/editor/core-document-editor/src/styles/editor.css
+++ b/packages/editor/core-document-editor/src/styles/editor.css
@@ -282,6 +282,7 @@ span:focus .fake-cursor {
 ol,
 ul {
   margin-top: 3px !important;
+  margin-bottom: 0px !important;
 }
 
 ol ol,
